# Distributed-Systems

lab1/chat/: chat.code-workspace
lab1/chat/client/: Cargo.toml
lab1/chat/client/src/: main.rs
lab1/chat/client/src/polling/: events.rs  handlers.rs  register.rs
lab1/chat/server/: Cargo.toml
lab1/chat/server/src/: main.rs  polling.rs
lab1/chat/server/src/polling/: events.rs  handlers.rs  register.rs
lab1/chat/server/src/polling/handlers/: connection.rs
lab2/api/: main.py
lab3/project/client/: Pipfile  main.py
lab3/project/cluster/: Dockerfile  docker-compose.yml
lab4_5/dynamic-invocation-client/src/sr/ice/client/: IceClient.java  Person.java
lab4_5/dynamic-invocation-server/: Dockerfile  server.py
lab4_5/dynamic-invocation-server/slice/: greet.ice
lab4_5/subscriptions-client/: client.py
lab4_5/subscriptions-client/proto/: subscription.proto  subscription_pb2.py  subscription_pb2.pyi  subscription_pb2_grpc.py
lab4_5/subscriptions-server/: Cargo.toml  build.rs
lab4_5/subscriptions-server/src/: main.rs
lab6/project/: Cargo.toml
