[package]
name = "subscriptions-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures-core = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
